--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     * {
       font-family: 'Plus Jakarta Sans', sans-serif;
       margin: 0;
-      
+      padding: 0;
     }
   </style>
   <title>Bintang Jaya</title>
